src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  text-align: center;
}

.light-box {
  @apply border-2 rounded-md text-prheart-400 dark:text-prheart-300 border-prheart-400 dark:border-prheart-300 hover:text-prheart-500 hover:border-prheart-500;
}

.dark-box {
  @apply border-2 rounded-md text-prheart-500 dark:text-prheart-200 border-prheart-500 dark:border-prheart-200 hover:text-prheart-600 hover:border-prheart-600;
}

.nav-list {
  transition: all .5s linear;
  @apply md:hidden absolute left-0 w-full bg-prheart-200 dark:bg-prheart-700 font-medium;
}

.nav-list li {
  @apply list-none text-prheart-600 dark:text-prheart-300;
}

.slice {
  transition: all .3s ease-in;
  @apply w-8 h-1 rounded bg-prheart-600 dark:bg-prheart-300 origin-center;
}

.title {
  @apply mt-32 text-3xl text-prheart-950 dark:text-prheart-50 font-bold;
}

.card-sm {
  @apply dark-box px-2 py-1 text-sm;
}

.input {
  @apply light-box placeholder:italic placeholder:text-prheart-400 dark:placeholder:text-prheart-200 invalid:border-pink-500 invalid:text-pink-600 focus:outline-none bg-transparent px-2 py-1;
}

.link {
  @apply block text-lg py-2 flex justify-center items-center gap-2;
}

